# container-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  __build__  fresh-build
cmd/: Cargo.toml
cmd/src/: main.rs
entrypoint/: README.md
localmc/: Cargo.toml
localmc/src/: lib.rs
mcproto-min-async/: Cargo.toml  README.md
mcproto-min-async/src/: codec.rs  de.rs  lib.rs  ser.rs  server.rs  varint.rs
mcproto-min-async/src/protocol/: mod.rs
query/: Cargo.toml
rcon/: Cargo.toml  README.md
rcon/src/: main.rs
server/: assemble.xsh  build-vanilla.xsh  utils.py  utils.xsh
server_builders/: _common.py  papermc.py  vanilla.py
status/: Cargo.toml
status/src/: main.rs
