[package]
name = "mcproto-min-async"
version = "0.1.0"
authors = ["x10A94 <hyperpone@gmail.com>"]
edition = "2018"

[profile.release]
lto="fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = [ "full" ] }
tokio-util = { version = "0.2", features = [ "codec" ] }
futures = { version = "0.3" }

flate2 = "1.0"

bytes = "0.5"
byteorder = "1.3"

serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
bincode = "1.1"
