[package]
name = "query"
version = "0.1.0"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mcproto-async = { git = "https://gogs.selic.re/AstraLuma/mcproto-async.git" }
mcproto-min-async = { path = "../mcproto-min-async" }
tokio = { version = "0.2", features = [ "macros" ] }
futures = { version = "0.3" }
